[gd_scene load_steps=8 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://1.png" type="Texture" id=2]
[ext_resource path="res://PLAYER_BULLET.gd" type="Script" id=3]
[ext_resource path="res://bullet.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.343842, 0.340363 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.69465, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 41.9572

[node name="PLAYER" type="KinematicBody2D" groups=[
"PLAYER",
]]
position = Vector2( 203.635, 505.319 )
collision_mask = 2
script = ExtResource( 1 )

[node name="PLAYER_SPRITE" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="PLAYER_COLLISION" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PLAYER_BULLET" type="Area2D" parent="."]
visible = false
position = Vector2( -497.555, -361.858 )
script = ExtResource( 3 )

[node name="PLAYER_BULLET_SPRITE" type="Sprite" parent="PLAYER_BULLET"]
texture = ExtResource( 4 )

[node name="PLAYER_BULLET_COLLISION" type="CollisionShape2D" parent="PLAYER_BULLET"]
shape = SubResource( 2 )

[node name="PLAYER_SHIELD_COLLISION" type="CollisionShape2D" parent="."]
scale = Vector2( 1.08323, 1.16 )
shape = SubResource( 3 )
disabled = true
